--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,104 @@
-bob.buildout == 2.2.5
-bob.extension == 5.0.1
-bob.blitz == 2.0.22
-bob.core == 2.2.6
-bob.io.base == 3.0.9
-bob.math == 3.1.7
-bob.measure == 4.2.2
-bob.io.image == 2.4.6
-bob.db.base == 3.0.5
-bob.io.video == 3.0.3
-bob.io.matlab == 2.0.17
-bob.io.audio == 2.0.13
-bob.sp == 2.0.16
-bob.ap == 2.1.11
-bob.ip.base == 2.2.6
-bob.ip.color == 2.0.16
-bob.ip.draw == 2.0.15
-bob.ip.gabor == 2.0.17
-bob.learn.activation == 2.0.16
-bob.learn.libsvm == 2.1.5
-bob.learn.linear == 2.1.8
-bob.learn.mlp == 2.1.12
-bob.learn.boosting == 2.0.19
-bob.db.iris == 2.1.7
-bob.learn.em == 2.1.6
-bob.db.wine == 2.0.15
-bob.db.mnist == 2.2.6
-bob.db.atnt == 2.0.16
-bob.ip.facedetect == 2.1.11
-bob.ip.optflow.hornschunck == 2.0.19
-bob.ip.optflow.liu == 2.0.18
-bob.ip.flandmark == 2.1.12
-gridtk == 1.8.1
-bob.ip.qualitymeasure == 1.1.6
-bob.ip.skincolorfilter == 0.0.9
-bob.ip.facelandmarks == 1.0.10
-bob.ip.dlib == 1.0.9
-bob.db.arface == 2.1.10
-bob.db.asvspoof == 1.2.5
-bob.db.asvspoof2017 == 1.1.5
-bob.db.atvskeystroke == 2.1.11
-bob.db.avspoof == 2.3.5
-bob.db.banca == 2.1.11
-bob.db.biosecure == 2.1.11
-bob.db.biosecurid.face == 2.1.14
-bob.db.casia_fasd == 2.0.10
-bob.db.casme2 == 2.1.12
-bob.db.caspeal == 2.1.11
-bob.db.cohface == 1.1.6
-bob.db.frgc == 2.1.9
-bob.db.gbu == 2.1.10
-bob.db.hci_tagging == 1.1.6
-bob.db.ijba == 2.1.6
-bob.db.ijbc == 1.0.4
-bob.db.kboc16 == 2.1.5
-bob.db.lfw == 2.1.11
-bob.db.livdet2013 == 2.1.5
-bob.db.mobio == 2.2.6
-bob.db.msu_mfsd_mod == 2.2.9
-bob.db.multipie == 2.1.10
-bob.db.nist_sre12 == 3.0.9
-bob.db.putvein == 1.3.6
-bob.db.replay == 3.0.9
-bob.db.replaymobile == 1.1.9
-bob.db.scface == 2.1.11
-bob.db.utfvp == 3.0.5
-bob.db.verafinger == 2.0.6
-bob.db.fv3d == 1.1.6
-bob.db.voicepa == 1.1.5
-bob.db.xm2vts == 2.1.10
-bob.db.youtube == 2.1.10
-bob.db.pericrosseye == 1.0.7
-bob.db.maskattack == 0.0.5
-bob.db.casiasurf == 1.0.3
-bob.db.fargo == 1.0.5
-bob.bio.base == 4.1.1
-bob.bio.gmm == 3.2.6
-bob.bio.face == 4.0.4
-bob.bio.spear == 3.2.6
-bob.bio.video == 3.4.6
-bob.bio.vein == 1.1.6
-bob.db.voxforge == 2.3.6
-bob.rppg.base == 2.0.6
-bob.pad.base == 2.3.1
-bob.pad.face == 2.2.3
-bob.pad.voice == 1.0.10
-bob.pad.vein == 1.0.5
-bob.fusion.base == 0.0.5
-bob.db.oulunpu == 0.1.2
-bob.db.uvad == 0.0.6
-bob.db.swan == 0.0.4
-bob.db.siw == 0.0.1
-bob.db.cuhk_cufs == 2.2.7
-bob.db.cbsr_nir_vis_2 == 2.0.7
-bob.db.nivl == 1.0.5
-bob.db.pola_thermal == 1.0.5
-bob.db.cuhk_cufsf == 1.0.6
-bob.db.ldhf == 1.0.4
-bob.ip.tensorflow_extractor == 0.0.7
-bob.learn.tensorflow == 1.2.1
-bob.learn.pytorch == 0.1.2
-bob.bio.face_ongoing == 1.0.7
-bob.bio.htface == 1.0.6
-bob.ip.binseg == 1.1.1
+bob.buildout ==2.2.5
+bob.extension ==5.0.1
+bob.blitz ==2.0.22
+bob.core ==2.2.6
+bob.io.base ==3.0.9
+bob.math ==3.1.7
+bob.measure ==4.2.2
+bob.io.image ==2.4.6
+bob.db.base ==3.0.5
+bob.io.video ==3.0.3
+bob.io.matlab ==2.0.17
+bob.io.audio ==2.0.13
+bob.sp ==2.0.16
+bob.ap ==2.1.11
+bob.ip.base ==2.2.6
+bob.ip.color ==2.0.16
+bob.ip.draw ==2.0.15
+bob.ip.gabor ==2.0.17
+bob.learn.activation ==2.0.16
+bob.learn.libsvm ==2.1.5
+bob.learn.linear ==2.1.8
+bob.learn.mlp ==2.1.12
+bob.learn.boosting ==2.0.19
+bob.db.iris ==2.1.7
+bob.learn.em ==2.1.6
+bob.db.wine ==2.0.15
+bob.db.mnist ==2.2.6
+bob.db.atnt ==2.0.16
+bob.ip.facedetect ==2.1.11
+bob.ip.optflow.hornschunck ==2.0.19
+bob.ip.optflow.liu ==2.0.18
+bob.ip.flandmark ==2.1.12
+gridtk ==1.8.1
+bob.ip.qualitymeasure ==1.1.6
+bob.ip.skincolorfilter ==0.0.9
+bob.ip.facelandmarks ==1.0.10
+bob.ip.dlib ==1.0.9
+bob.db.arface ==2.1.10
+bob.db.asvspoof ==1.2.5
+bob.db.asvspoof2017 ==1.1.5
+bob.db.atvskeystroke ==2.1.11
+bob.db.avspoof ==2.3.5
+bob.db.banca ==2.1.11
+bob.db.biosecure ==2.1.11
+bob.db.biosecurid.face ==2.1.14
+bob.db.casia_fasd ==2.0.10
+bob.db.casme2 ==2.1.12
+bob.db.caspeal ==2.1.11
+bob.db.cohface ==1.1.6
+bob.db.frgc ==2.1.9
+bob.db.gbu ==2.1.10
+bob.db.hci_tagging ==1.1.6
+bob.db.ijba ==2.1.6
+bob.db.ijbc ==1.0.4
+bob.db.kboc16 ==2.1.5
+bob.db.lfw ==2.1.11
+bob.db.livdet2013 ==2.1.5
+bob.db.mobio ==2.2.6
+bob.db.msu_mfsd_mod ==2.2.9
+bob.db.multipie ==2.1.10
+bob.db.nist_sre12 ==3.0.9
+bob.db.putvein ==1.3.6
+bob.db.replay ==3.0.9
+bob.db.replaymobile ==1.1.9
+bob.db.scface ==2.1.11
+bob.db.utfvp ==3.0.5
+bob.db.verafinger ==2.0.6
+bob.db.fv3d ==1.1.6
+bob.db.voicepa ==1.1.5
+bob.db.xm2vts ==2.1.10
+bob.db.youtube ==2.1.10
+bob.db.pericrosseye ==1.0.7
+bob.db.maskattack ==0.0.5
+bob.db.casiasurf ==1.0.3
+bob.db.fargo ==1.0.5
+bob.bio.base ==4.1.1
+bob.bio.gmm ==3.2.6
+bob.bio.face ==4.0.4
+bob.bio.spear ==3.2.6
+bob.bio.video ==3.4.6
+bob.bio.vein ==1.1.6
+bob.db.voxforge ==2.3.6
+bob.rppg.base ==2.0.6
+bob.pad.base ==2.3.1
+bob.pad.face ==2.2.3
+bob.pad.voice ==1.0.10
+bob.pad.vein ==1.0.5
+bob.fusion.base ==0.0.5
+bob.db.oulunpu ==0.1.2
+bob.db.uvad ==0.0.6
+bob.db.swan ==0.0.4
+bob.db.siw ==0.0.2
+bob.db.cuhk_cufs ==2.2.7
+bob.db.cbsr_nir_vis_2 ==2.0.7
+bob.db.nivl ==1.0.5
+bob.db.pola_thermal ==1.0.5
+bob.db.cuhk_cufsf ==1.0.6
+bob.db.ldhf ==1.0.4
+bob.ip.tensorflow_extractor ==0.0.7
+bob.learn.tensorflow ==1.2.1
+bob.learn.pytorch ==0.1.2 ; sys_platform == 'linux'
+bob.bio.face_ongoing ==1.0.7
+bob.bio.htface ==1.0.6
+bob.ip.binseg ==1.1.1 ; sys_platform == 'linux'
