--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -40,98 +40,65 @@ requirements:
     - bob.io.image
     - bob.db.base
     - bob.io.video
-    - bob.io.matlab
     - bob.io.audio
     - bob.sp
     - bob.ap
     - bob.ip.base
     - bob.ip.color
-    - bob.ip.draw
     - bob.ip.gabor
     - bob.learn.activation
     - bob.learn.libsvm
     - bob.learn.linear
     - bob.learn.mlp
-    - bob.learn.boosting
     - bob.db.iris
     - bob.learn.em
-    - bob.db.wine
     - bob.db.mnist
     - bob.db.atnt
     - bob.ip.facedetect
-    - bob.ip.optflow.hornschunck
-    - bob.ip.optflow.liu
-    - bob.ip.flandmark
     - gridtk
     - bob.ip.qualitymeasure
     - bob.ip.skincolorfilter
-    - bob.ip.facelandmarks
-    - bob.ip.dlib
     - bob.db.arface
     - bob.db.asvspoof
     - bob.db.asvspoof2017
     - bob.db.atvskeystroke
-    - bob.db.avspoof
-    - bob.db.banca
-    - bob.db.biosecure
-    - bob.db.biosecurid.face
     - bob.db.casia_fasd
-    - bob.db.casme2
-    - bob.db.caspeal
-    - bob.db.cohface
-    - bob.db.frgc
     - bob.db.gbu
-    - bob.db.hci_tagging
-    - bob.db.ijba
     - bob.db.ijbc
-    - bob.db.kboc16
     - bob.db.lfw
     - bob.db.livdet2013
     - bob.db.mobio
-    - bob.db.msu_mfsd_mod
     - bob.db.multipie
-    - bob.db.nist_sre12
-    - bob.db.putvein
     - bob.db.replay
     - bob.db.replaymobile
-    - bob.db.scface
-    - bob.db.utfvp
-    - bob.db.verafinger
-    - bob.db.fv3d
     - bob.db.voicepa
     - bob.db.xm2vts
     - bob.db.youtube
-    - bob.db.pericrosseye
     - bob.db.maskattack
     - bob.db.casiasurf
     - bob.db.fargo
+    - bob.db.verafinger
+    - bob.db.utfvp
+    - bob.db.fv3d
+    - bob.db.putvein
+    - bob.pipelines
     - bob.bio.base
     - bob.bio.gmm
     - bob.bio.face
-    - bob.bio.spear
     - bob.bio.video
     - bob.bio.vein
-    - bob.db.voxforge
-    - bob.rppg.base
     - bob.pad.base
     - bob.pad.face
-    - bob.pad.voice
     - bob.fusion.base
-    - bob.db.oulunpu
     - bob.db.uvad
-    - bob.db.swan
-    - bob.db.siw
     - bob.db.cuhk_cufs
     - bob.db.cbsr_nir_vis_2
     - bob.db.nivl
     - bob.db.pola_thermal
     - bob.db.cuhk_cufsf
     - bob.db.ldhf
-    - bob.ip.tensorflow_extractor
     - bob.learn.tensorflow
     - bob.learn.pytorch  # [linux]
-    - bob.bio.face_ongoing
-    - bob.bio.htface
     - bob.ip.binseg  # [linux]
     # LIST OF BOB PACKAGES - END
   run:
