Testing bob.buildout wiht pytest. Added dask-ml as test dependency

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -117,7 +117,8 @@ test:
   commands:
     - export SDKROOT="{{ SDKROOT }}"  # [osx]
     - export MACOSX_DEPLOYMENT_TARGET="{{ MACOSX_DEPLOYMENT_TARGET }}"  # [osx]
-    - nosetests --with-coverage --cover-package={{ name }} -sv {{ name }}
+    - nosetests --with-coverage --cover-package={{ name }} -sv {{ name }} --exclude bob.buildout
+    - pytest --verbose --cov bob.buildout --cov-report term-missing --pyargs bob.buildout
     - sphinx-build -aEW {{ project_dir }}/doc {{ project_dir }}/sphinx
     - sphinx-build -aEb doctest {{ project_dir }}/doc sphinx
     - conda inspect linkages -p $PREFIX {{ name }}  # [not win]
@@ -132,6 +133,7 @@ test:
     - pkg-config
     - freetype
     - psutil  # for bob.io.video
+    - dask-ml {{ dask_ml }}    
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
   {% for package in resolved_packages('host') %}
