Add bob.io.stream and bob.ip.stereo

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -55,6 +55,8 @@ requirements:
     - bob.ip.facedetect
     - gridtk
     - bob.ip.qualitymeasure
+    - bob.io.stream
+    - bob.ip.stereo
     - bob.pipelines
     - bob.learn.tensorflow  # [linux]
     - bob.bio.base
