--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,13 @@
 bob.extension
-bob.blitz
-bob.core
 bob.io.base
-bob.math
 bob.measure
-bob.sp
-bob.ap
 bob.learn.em
-gridtk
 bob.pipelines
 bob.bio.base
-bob.bio.gmm
 bob.bio.face
 bob.bio.video
 bob.bio.vein
-bob.ip.qualitymeasure
+bob.bio.spear
 bob.pad.base
 bob.pad.face
 bob.fusion.base
-bob.io.stream
-bob.ip.stereo
