Pinning packages for the next release. [skip ci]

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-bob.extension
-bob.io.base
-bob.measure
-bob.learn.em
-bob.pipelines
-bob.bio.base
-bob.bio.face
-bob.bio.video
-bob.bio.vein
-bob.bio.spear
-bob.pad.base
-bob.pad.face
-bob.fusion.base
+bob.extension ==7.0.0
+bob.io.base ==5.0.0
+bob.measure ==6.0.0
+bob.learn.em ==3.0.0
+bob.pipelines ==3.0.0
+bob.bio.base ==7.0.0
+bob.bio.face ==7.0.0
+bob.bio.video ==6.0.0
+bob.bio.vein ==4.0.0
+bob.bio.spear ==4.0.0
+bob.pad.base ==5.0.0
+bob.pad.face ==4.0.0
+bob.fusion.base ==0.1.0
