feat!: Clean files to make this package up to date

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-include README.rst CHANGELOG LICENSE buildout.cfg requirements.txt version.txt
+include README.md LICENSE
 recursive-include doc *.rst *.png conf.py *.py *.ico
