deps: add clapper as dependency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@
         "Topic :: Scientific/Engineering :: Artificial Intelligence",
     ]
     dependencies = [
+        "clapper",
         "click",
         "click-plugins",
     ]
